@@ -2,6 +2,9 @@
 
 Changes with Apache 2.3.14
 
+  *) mod_negotiation: Fix parsing of Content-Length in type maps. PR 42203.
+     [Nagae Hidetake <nagae eagan jp>]
+
   *) core: Add more logging to ap_scan_script_header_err* functions. Add
      ap_scan_script_header_err*_ex functions that take a module index for
      logging.
